--- a/Implementation/FatSodDental/CABOPMANAGEMENT/Areas/Sale/Views/RptValideBill/Index.cshtml
+++ b/Implementation/FatSodDental/CABOPMANAGEMENT/Areas/Sale/Views/RptValideBill/Index.cshtml
@@ -205,7 +205,7 @@
                 $('#TotMntFacture').val(value.TotMntFacture);
             });
         }, 'json');
-        
+
     }
     // Get the Branch List
     function populateBranch() {
@@ -295,7 +295,8 @@
                 {// this is Actions Column
                     mRender: function (data, type, row) {
                         var printOption = '@LoadAction.IsSubMenuActionAble(MenuAction.UPDATE, @profile, CodeValue.Sale.Report.RptValideBill, db)';
-                        var showPrint = (printOption == 'False') ? '<a href="@Url.Action("RptFactureValidate", "ReportsHome", new { Area = "", CustomerOrderID = -1 })" class="editor_remove"><span class="glyphicon glyphicon-print"></span></a>' : '';
+                        var currentcompany = '@ViewBag.currentcompany';
+                        var showPrint = (printOption == 'False') ? (currentcompany.includes("GOLDEN")) ? '<a href="@Url.Action("RptFactureGolden", "ReportsHome", new { Area = "", CustomerOrderID = -1 })" class="editor_remove"><span class="glyphicon glyphicon-print"></span></a>' : '<a href="@Url.Action("RptFactureValidate", "ReportsHome", new { Area = "", CustomerOrderID = -1 })" class="editor_remove"><span class="glyphicon glyphicon-print"></span></a>' : '';
                         showPrint = showPrint.replace("-1", row.CustomerOrderID);
 
                         var deleteOption = '@LoadAction.IsSubMenuActionAble(MenuAction.DELETE, @profile, CodeValue.Sale.Report.RptValideBill, db)';
@@ -330,12 +331,12 @@
 
                 $('#DeleteID').val(value.DeleteID);
                 $('#BillNumber').val(value.BillNumber);
-               
+
             });
         }, 'json');
 
     }
-    
+
     function DeleteItem() {
         if (confirm("@Resources.ConfirmDeleteMessage")) {
             var isAllValid = true;
@@ -446,6 +447,6 @@
         $('#btnDelete').on('click', function () {
             DeleteItem();
         });
-        
+
     });
 </script>
