--- a/Implementation/FatSodDental/CABOPMANAGEMENT/Areas/Sale/Views/RptDeletedBill/Index.cshtml
+++ b/Implementation/FatSodDental/CABOPMANAGEMENT/Areas/Sale/Views/RptDeletedBill/Index.cshtml
@@ -270,7 +270,12 @@
                 {// this is Actions Column
                     mRender: function (data, type, row) {
                         var printOption = '@LoadAction.IsSubMenuActionAble(MenuAction.UPDATE, @profile, CodeValue.Sale.Report.RptDeletedBill, db)';
-                        var showPrint = (printOption == 'False') ? '<a href="@Url.Action("RptFactureValidate", "ReportsHome", new { Area = "", CustomerOrderID = -1 })" class="editor_remove"><span class="glyphicon glyphicon-print"></span></a>' : '';
+
+                        var currentcompany = '@ViewBag.currentcompany';
+                        var showPrint = (printOption == 'False') ? (currentcompany.includes("GOLDEN")) ? '<a href="@Url.Action("RptFactureGolden", "ReportsHome", new { Area = "", CustomerOrderID = -1 })" class="editor_remove"><span class="glyphicon glyphicon-print"></span></a>' : '<a href="@Url.Action("RptFactureValidate", "ReportsHome", new { Area = "", CustomerOrderID = -1 })" class="editor_remove"><span class="glyphicon glyphicon-print"></span></a>' : '';
+                        showPrint = showPrint.replace("-1", row.CustomerOrderID);
+
+                        @*var showPrint = (printOption == 'False') ? '<a href="@Url.Action("RptFactureValidate", "ReportsHome", new { Area = "", CustomerOrderID = -1 })" class="editor_remove"><span class="glyphicon glyphicon-print"></span></a>' : '';*@
                         showPrint = showPrint.replace("-1", row.CustomerOrderID);
 
                         return showPrint ;
